# GameplayFootball

./: .travis.yml  CMakeLists.txt  README.md  sources.cmake
CMakeModules/: FindBlunted2.cmake  FindSDL_gfx.cmake  FindSGE.cmake
data/databases/default/: database.sqlite
data/media/shaders/: ambient.frag  lighting.frag  postprocess.frag  simple.frag  zphase.frag
src/: blunted.cpp  blunted.hpp  dbquery.cpp  dbquery.hpp  defines.hpp  gamedefines.cpp  gamedefines.hpp  gametask.cpp  gametask.hpp  main.cpp  main.hpp  utils.cpp  utils.hpp
src/base/: exception.cpp  exception.hpp  log.cpp  log.hpp  properties.cpp  properties.hpp  sdl_surface.cpp  sdl_surface.hpp  utils.cpp  utils.hpp
src/base/geometry/: aabb.cpp  aabb.hpp  line.cpp  line.hpp  plane.cpp  plane.hpp  triangle.cpp  triangle.hpp  trianglemeshutils.cpp  trianglemeshutils.hpp
src/base/math/: bluntmath.cpp  bluntmath.hpp  matrix3.cpp  matrix3.hpp  matrix4.cpp  matrix4.hpp  quaternion.cpp  quaternion.hpp  vector3.cpp  vector3.hpp
src/data/: matchdata.cpp  matchdata.hpp  playerdata.cpp  playerdata.hpp  teamdata.cpp  teamdata.hpp
src/framework/: scheduler.cpp  scheduler.hpp  tasksequence.cpp  tasksequence.hpp  workerthread.cpp  workerthread.hpp
src/hid/: gamepad.cpp  gamepad.hpp  ihidevice.hpp  keyboard.cpp  keyboard.hpp
src/league/: leaguecode.cpp  leaguecode.hpp
src/libs/fastevents/: SDLUtils.c  SDLUtils.h  fastevents.c  fastevents.h  queue.h  trace.c  trace.h
src/loaders/: aseloader.cpp  aseloader.hpp  imageloader.cpp  imageloader.hpp  wavloader.cpp  wavloader.hpp
src/managers/: environmentmanager.cpp  environmentmanager.hpp  resourcemanager.hpp  resourcemanagerpool.cpp  resourcemanagerpool.hpp  scenemanager.cpp  scenemanager.hpp  systemmanager.cpp  systemmanager.hpp  taskmanager.cpp  taskmanager.hpp  usereventmanager.cpp  usereventmanager.hpp
src/menu/: cameramenu.cpp  cameramenu.hpp  controllerselect.cpp  controllerselect.hpp  credits.cpp  credits.hpp  gameplan.cpp  gameplan.hpp  mainmenu.cpp  mainmenu.hpp  menuscene.cpp  menuscene.hpp  menutask.cpp  menutask.hpp  pagefactory.cpp  pagefactory.hpp  settings.cpp  settings.hpp  visualoptions.cpp  visualoptions.hpp
src/menu/ingame/: gameover.cpp  gameover.hpp  gamepage.cpp  gamepage.hpp  ingame.cpp  ingame.hpp  phasemenu.cpp  phasemenu.hpp  playerhud.cpp  playerhud.hpp  radar.cpp  radar.hpp  replaymenu.cpp  replaymenu.hpp  scoreboard.cpp  scoreboard.hpp  tacticsdebug.cpp  tacticsdebug.hpp
src/menu/league/: league.cpp  league.hpp  league_calendar.cpp  league_calendar.hpp  league_forward.cpp  league_forward.hpp  league_inbox.cpp  league_inbox.hpp  league_management.cpp  league_management.hpp  league_standings.cpp  league_standings.hpp  league_system.cpp  league_system.hpp  league_team.cpp  league_team.hpp
src/menu/startmatch/: loadingmatch.cpp  loadingmatch.hpp  matchoptions.cpp  matchoptions.hpp  teamselect.cpp  teamselect.hpp
src/menu/widgets/: gameplansubmenu.cpp  gameplansubmenu.hpp  planmap.cpp  planmap.hpp
src/misc/: hungarian.c  hungarian.h  perlin.cpp  perlin.h
src/onthepitch/: ball.cpp  ball.hpp  humangamer.cpp  humangamer.hpp  match.cpp  match.hpp  officials.cpp  officials.hpp  proceduralpitch.cpp  proceduralpitch.hpp  referee.cpp  referee.hpp  team.cpp  team.hpp  teamAIcontroller.cpp  teamAIcontroller.hpp
src/onthepitch/AIsupport/: AIfunctions.cpp  AIfunctions.hpp  mentalimage.cpp  mentalimage.hpp
src/onthepitch/player/: player.cpp  player.hpp  playerbase.cpp  playerbase.hpp  playerofficial.cpp  playerofficial.hpp
src/onthepitch/player/controller/: elizacontroller.cpp  elizacontroller.hpp  humancontroller.cpp  humancontroller.hpp  icontroller.cpp  icontroller.hpp  playercontroller.cpp  playercontroller.hpp  refereecontroller.cpp  refereecontroller.hpp
src/onthepitch/player/humanoid/: animcollection.cpp  animcollection.hpp  humanoid.cpp  humanoid.hpp  humanoid_utils.cpp  humanoid_utils.hpp  humanoidbase.cpp  (+1 more)
src/scene/: iscene.hpp  object.cpp  object.hpp  objectfactory.cpp  objectfactory.hpp  scene.cpp  scene.hpp
src/scene/objects/: audioreceiver.cpp  audioreceiver.hpp  camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  image2d.cpp  image2d.hpp  joint.cpp  joint.hpp  light.cpp  light.hpp  skybox.cpp  skybox.hpp  sound.cpp  sound.hpp
src/scene/resources/: geometrydata.cpp  geometrydata.hpp  soundbuffer.cpp  soundbuffer.hpp  surface.cpp  surface.hpp
src/scene/scene2d/: scene2d.cpp  scene2d.hpp
src/scene/scene3d/: node.cpp  node.hpp  scene3d.cpp  scene3d.hpp
src/systems/: isystem.hpp  isystemobject.hpp  isystemscene.hpp  isystemtask.cpp  isystemtask.hpp
src/systems/audio/: audio_object.cpp  audio_object.hpp  audio_scene.cpp  audio_scene.hpp  audio_system.cpp  audio_system.hpp
src/systems/graphics/: graphics_object.cpp  graphics_object.hpp  graphics_scene.cpp  graphics_scene.hpp  graphics_system.cpp  graphics_system.hpp  graphics_task.cpp  graphics_task.hpp
src/systems/physics/: physics_object.cpp  physics_object.hpp  physics_scene.cpp  physics_scene.hpp  physics_system.cpp  physics_system.hpp  physics_task.cpp  physics_task.hpp
src/types/: command.cpp  command.hpp  interpreter.hpp  iusertask.cpp  iusertask.hpp  loader.hpp  lockable.hpp  material.hpp  messagequeue.hpp  observer.cpp  observer.hpp  refcounted.cpp  refcounted.hpp  resource.hpp  singleton.hpp  spatial.cpp  spatial.hpp  subject.hpp  thread.hpp  trianglemesh.cpp  trianglemesh.hpp
src/utils/: animation.cpp  animation.hpp  console.cpp  console.hpp  database.cpp  database.hpp  directoryparser.cpp  directoryparser.hpp  objectloader.cpp  objectloader.hpp  orbitcamera.cpp  orbitcamera.hpp  splitgeometry.cpp  splitgeometry.hpp  text2d.cpp  text2d.hpp  threadhud.cpp  threadhud.hpp  xmlloader.cpp  xmlloader.hpp
src/utils/animationextensions/: animationextension.hpp  footballanimationextension.cpp  footballanimationextension.hpp
src/utils/gui2/: events.cpp  events.hpp  guitask.cpp  guitask.hpp  page.cpp  page.hpp  style.cpp  style.hpp  view.cpp  view.hpp  windowmanager.cpp  windowmanager.hpp
tools/animator/src/: animator.cpp  animator.hpp  main.cpp  main.hpp
(+99 files in other folders)
